# CS100-Project

./: .gitignore  CMakeLists.txt  README.md
include/: Board.h  Graphic.h  Image.h  Movement.h  Pineapple.h  PineappleMovement.h  Snake.h  SnakeMovement.h
src/: Board.cpp  Image.cpp  Pineapple.cpp  PineappleMovement.cpp  Snake.cpp  SnakeMovement.cpp  main.cpp
tests/: boardAlgtest.h  imageAlgTest.h  pineappleAlgTest.h  snakeAlgTest.h  unit_test.cpp
